# extract_linked_reports

./: CUSTOM_EMAIL_README.md  README.md
.github/workflows/: auto-assign-author.yml  manage-ui-label.yml
documentation/: apply_SSL_certificate.md  configure_custom_email_templates.md  enable_googlemaps.md  google_auth.md  grafana_access.md  howto_patch_pod.md  jira_integration.md  kibana_logs.md  new_cloud_integration.md  optscale_roles.md  password_strength.md  periodic_jobs.md  setting_up_smtp.md  slack_integration.md  update_to_24.04.md  use_external_databases.md  verification_code.md
herald/: Dockerfile  email_test_data.py  pyproject.toml
herald/herald_server/: server.py  utils.py
herald/herald_server/controllers/: base.py  notification.py  reaction.py
herald/herald_server/models/: db_factory.py  models.py  (+1 more)
slacker /: Dockerfile  Dockerfile_tests  README.md  pyproject.toml
slacker /slacker_server/: generate_slack_messages.py  write_spec.py
slacker /slacker_server/controllers/: base.py  connect.py  send_message.py
slacker /slacker_server/handlers /v2/: base.py  connect.py  send_message.py
slacker /slacker_server/message_templates/: alerts.py  bookings.py  connect.py  constraint_violations.py  constraints.py  disconnect.py  env_alerts.py  envs.py  org.py  resource_details.py  resources.py  warnings.py
slacker /slacker_server/swagger/: swagger-ui-bundle.js.map  swagger-ui-standalone-preset.js.map  swagger-ui.js  swagger-ui.js.map
slacker /slacker_server/tests/: test_api_base.py  test_send_message_api.py
synops-deploy/overlay/: user_template.yml
(+11 files in other folders)
